--- a/CuaHangThucPham/CuaHangThucPham/CuaHangThucPham.csproj
+++ b/CuaHangThucPham/CuaHangThucPham/CuaHangThucPham.csproj
@@ -3626,6 +3626,7 @@
     <Content Include="Public\image\banners\subbanner6.png" />
     <Content Include="Public\image\banners\subbanner7.jpg" />
     <Content Include="Public\image\banners\subbanner7.png" />
+    <Content Include="Public\image\basket.png" />
     <Content Include="Public\image\blog\blog_1.jpg" />
     <Content Include="Public\image\blog\blog_2.jpg" />
     <Content Include="Public\image\blog\blog_3.jpg" />
@@ -3685,6 +3686,76 @@
     <Content Include="Public\image\team2.jpg" />
     <Content Include="Public\image\team3.jpg" />
     <Content Include="Public\image\team4.jpg" />
+    <Content Include="Public\image\theme\icon-phone.png" />
+    <Content Include="Public\image\theme\icons\1.png" />
+    <Content Include="Public\image\theme\icons\10-10.png" />
+    <Content Include="Public\image\theme\icons\10.png" />
+    <Content Include="Public\image\theme\icons\11.png" />
+    <Content Include="Public\image\theme\icons\12-12.png" />
+    <Content Include="Public\image\theme\icons\12.png" />
+    <Content Include="Public\image\theme\icons\13-13.png" />
+    <Content Include="Public\image\theme\icons\13.png" />
+    <Content Include="Public\image\theme\icons\14-14.png" />
+    <Content Include="Public\image\theme\icons\14.png" />
+    <Content Include="Public\image\theme\icons\15-15.png" />
+    <Content Include="Public\image\theme\icons\15.png" />
+    <Content Include="Public\image\theme\icons\16-16.png" />
+    <Content Include="Public\image\theme\icons\16.png" />
+    <Content Include="Public\image\theme\icons\2-2.png" />
+    <Content Include="Public\image\theme\icons\2.png" />
+    <Content Include="Public\image\theme\icons\3-3.png" />
+    <Content Include="Public\image\theme\icons\3.png" />
+    <Content Include="Public\image\theme\icons\4-4.png" />
+    <Content Include="Public\image\theme\icons\4.png" />
+    <Content Include="Public\image\theme\icons\5-5.png" />
+    <Content Include="Public\image\theme\icons\5.png" />
+    <Content Include="Public\image\theme\icons\6-6.png" />
+    <Content Include="Public\image\theme\icons\6.png" />
+    <Content Include="Public\image\theme\icons\7.png" />
+    <Content Include="Public\image\theme\icons\8-8.png" />
+    <Content Include="Public\image\theme\icons\8.png" />
+    <Content Include="Public\image\theme\icons\9-9.png" />
+    <Content Include="Public\image\theme\icons\9.png" />
+    <Content Include="Public\image\theme\icons\apple-touch-icon-114-precomposed.png" />
+    <Content Include="Public\image\theme\icons\arrow-slider-left.png" />
+    <Content Include="Public\image\theme\icons\arrow-slider-right.png" />
+    <Content Include="Public\image\theme\icons\bg-selectbox.png" />
+    <Content Include="Public\image\theme\icons\bg_module.png" />
+    <Content Include="Public\image\theme\icons\btn-cart.png" />
+    <Content Include="Public\image\theme\icons\btn-menu-mobile.png" />
+    <Content Include="Public\image\theme\icons\collections-1-1.png" />
+    <Content Include="Public\image\theme\icons\collections-2-1.png" />
+    <Content Include="Public\image\theme\icons\collections-3-1.png" />
+    <Content Include="Public\image\theme\icons\collections-4-1.png" />
+    <Content Include="Public\image\theme\icons\collections-5-1.png" />
+    <Content Include="Public\image\theme\icons\collections-6-1.png" />
+    <Content Include="Public\image\theme\icons\ico-celander.png" />
+    <Content Include="Public\image\theme\icons\ico-freeship.png" />
+    <Content Include="Public\image\theme\icons\ico-menu-parent.png" />
+    <Content Include="Public\image\theme\icons\ico-money.png" />
+    <Content Include="Public\image\theme\icons\ico-new.png" />
+    <Content Include="Public\image\theme\icons\ico-quicklink.png" />
+    <Content Include="Public\image\theme\icons\ico-sale.png" />
+    <Content Include="Public\image\theme\icons\ico-slider.png" />
+    <Content Include="Public\image\theme\icons\ico-umbrella.png" />
+    <Content Include="Public\image\theme\icons\icon-hot.png" />
+    <Content Include="Public\image\theme\icons\icon-image.png" />
+    <Content Include="Public\image\theme\icons\icon_minicart.png" />
+    <Content Include="Public\image\theme\icons\icon_quote.png" />
+    <Content Include="Public\image\theme\icons\icon_search.png" />
+    <Content Include="Public\image\theme\icons\New folder\bg_module.png" />
+    <Content Include="Public\image\theme\icons\next-prev-detail.png" />
+    <Content Include="Public\image\theme\icons\phone-ring.png" />
+    <Content Include="Public\image\theme\icons\policy_1.png" />
+    <Content Include="Public\image\theme\icons\policy_1_1.png" />
+    <Content Include="Public\image\theme\icons\policy_2.png" />
+    <Content Include="Public\image\theme\icons\policy_2_2.png" />
+    <Content Include="Public\image\theme\icons\policy_3.png" />
+    <Content Include="Public\image\theme\icons\policy_3_3.png" />
+    <Content Include="Public\image\theme\icons\policy_4.png" />
+    <Content Include="Public\image\theme\icons\policy_4_4.png" />
+    <Content Include="Public\image\theme\lazy-loader.gif" />
+    <Content Include="Public\image\theme\phone-ring.png" />
     <Content Include="Public\javascript\common.js" />
     <Content Include="Public\javascript\DioProgress.js" />
     <Content Include="Public\javascript\global.js" />
